# VolumetricLightDemo

./: .gitignore  2  CMakeLists.txt  WalkingSim.pro  codestyle.md  references.md
Inspiration/: C38rveRWYAABAwx.jpg-large  C8MHEyWUIAAJd4l.jpg-large
cmake/: FindSDL2_MIXER.cmake  FindSRE.cmake
data/: debug_frag.glsl  debug_vert.glsl  deferred_frag.glsl  deferred_vert.glsl  depth_frag.glsl  depth_vert.glsl  geom_frag.glsl  geom_vert.glsl  landscape.blend  landscape.blend1  light_frag.glsl  light_vert.glsl  pass_vert.glsl  screen_frag.glsl  screen_vert.glsl  standard.scene  standard_frag.glsl  standard_vert.glsl  test.scene
src/: Engine.cpp  Engine.hpp  Entity.hpp  Game.hpp  God.cpp  God.hpp  Input.cpp  Input.hpp  Player.hpp  main.cpp
src/engine/: Engine.cpp  Engine.cpp.autosave  Engine.hpp  Entity.hpp  Input.cpp  Input.hpp
src/engine/render/: BlendType.hpp  Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  Light.cpp  Light.hpp  LightType.hpp  Mesh.cpp  Mesh.hpp  MeshTopology.hpp  RenderEngine.cpp  RenderEngine.hpp  RenderStats.h  Shader.cpp  Shader.hpp  SimpleRenderEngine.cpp  SimpleRenderEngine.hpp  Texture.cpp  Texture.hpp
src/engine/render/imgui/: imgui_re.cpp  imgui_re.hpp
src/engine/utils/: DataPath.hpp  DebugInterface.hpp  DynamicPool.hpp  FileLoader.hpp  SceneLoader.hpp
src/game/: Game.hpp  Player.hpp
src/renderer/: Camera.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp
src/renderer/imgui/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.hpp  imgui_renderer.cpp  imgui_renderer.hpp
src/utils/: AssetManager.cpp  AssetManager.hpp  DataPath.hpp  DebugInterface.hpp  FileLoader.hpp  ObjParser.hpp  Pool.hpp  SceneLoader.hpp  Timer.hpp
